--- a/Digital_shop/templates/index.html
+++ b/Digital_shop/templates/index.html
@@ -237,7 +237,7 @@
                 <div class="card h-100 border-transparent d-flex flex-column flex-sm-row">
                   <!-- Image Section (col-12 on small screens, col-6 on large screens) -->
                   <div class="col-12 col-sm-6 d-flex justify-content-center align-items-center">
-                    <img src="{{ book.image.url }}" class="card-img-top img-fluid shadow hover-grow" alt="{{ book.name }}" />
+                    <img src="{{ book.image.url }}" loading="lazy" class="card-img-top img-fluid shadow hover-grow" alt="{{ book.name }}" />
                   </div>
 
                   <!-- Product Info Section (col-12 on small screens, col-6 on large screens) -->
@@ -295,7 +295,7 @@
                 <div class="card h-100 border-transparent d-flex flex-column flex-sm-row">
                   <!-- Image Section (col-12 on small screens, col-6 on large screens) -->
                   <div class="col-12 col-sm-6 d-flex justify-content-center align-items-center">
-                    <img src="{{ video.image.url }}" class="card-img-top img-fluid shadow hover-grow" alt="{{ video.name }}" />
+                    <img src="{{ video.image.url }}" loading="lazy" class="card-img-top img-fluid shadow hover-grow" alt="{{ video.name }}" />
                   </div>
 
                   <!-- Product Info Section (col-12 on small screens, col-6 on large screens) -->
@@ -353,7 +353,7 @@
                 <div class="card h-100 border-transparent d-flex flex-column flex-sm-row">
                   <!-- Image Section (col-12 on small screens, col-6 on large screens) -->
                   <div class="col-12 col-sm-6 d-flex justify-content-center align-items-center">
-                    <img src="{{ audio.image.url }}" class="card-img-top img-fluid shadow hover-grow" alt="{{ audio.name }}" />
+                    <img src="{{ audio.image.url }}" loading="lazy" class="card-img-top img-fluid shadow hover-grow" alt="{{ audio.name }}" />
                   </div>
 
                   <!-- Product Info Section (col-12 on small screens, col-6 on large screens) -->
@@ -435,7 +435,7 @@
               <div class="card h-100 border-transparent d-flex flex-column flex-sm-row">
                 <!-- Image Section (col-12 on small screens, col-6 on large screens) -->
                 <div class="col-12 col-sm-6 d-flex justify-content-center align-items-center">
-                  <img src="{{ book.image.url }}" class="card-img-top rounded shadow hover-grow" alt="{{ book.name }}" />
+                  <img src="{{ book.image.url }}" loading="lazy" class="card-img-top rounded shadow hover-grow" alt="{{ book.name }}" />
                 </div>
 
                 <!-- Product Info Section (col-12 on small screens, col-6 on large screens) -->
@@ -484,7 +484,7 @@
               <div class="card h-100 border-transparent d-flex flex-column flex-sm-row">
                 <!-- Image Section (col-12 on small screens, col-6 on large screens) -->
                 <div class="col-12 col-sm-6 d-flex justify-content-center align-items-center">
-                  <img src="{{ video.image.url }}" class="card-img-top img-fluid shadow hover-grow" alt="{{ video.name }}" />
+                  <img src="{{ video.image.url }}" loading="lazy" class="card-img-top img-fluid shadow hover-grow" alt="{{ video.name }}" />
                 </div>
 
                 <!-- Product Info Section (col-12 on small screens, col-6 on large screens) -->
@@ -542,7 +542,7 @@
               <div class="card h-100 border-transparent d-flex flex-column flex-sm-row">
                 <!-- Image Section (col-12 on small screens, col-6 on large screens) -->
                 <div class="col-12 col-sm-6 d-flex justify-content-center align-items-center">
-                  <img src="{{ audio.image.url }}" class="card-img-top img-fluid shadow hover-grow" alt="{{ audio.name }}" />
+                  <img src="{{ audio.image.url }}" loading="lazy" class="card-img-top img-fluid shadow hover-grow" alt="{{ audio.name }}" />
                 </div>
 
                 <!-- Product Info Section (col-12 on small screens, col-6 on large screens) -->
