--- a/Digital_shop/templates/cart.html
+++ b/Digital_shop/templates/cart.html
@@ -114,7 +114,7 @@
             {% for item in cart_items %}
               <tr>
                 <td>
-                  <img src="{{ item.product.image.url }}" class="img-fluid" alt="{{ item.product.name }}" style="height: 80px; width: 80px;" />
+                  <img src="{{ item.product.image.url }}" loading="lazy" class="img-fluid" alt="{{ item.product.name }}" style="height: 80px; width: 80px;" />
                 </td>
                 <td>{{ item.product.name }}</td>
                 <td class="price" data-price="{{ item.product.price }}" data-currency="ngn">{{ item.product.price|intcomma }}</td>
