--- a/Digital_shop/templates/index.html
+++ b/Digital_shop/templates/index.html
@@ -172,13 +172,10 @@
                    alt="{{ slide.heading }}" />
               <!-- Text Section -->
               <div class="carousel-caption position-absolute mt-5 pt-5  top-50 start-50 translate-middle text-center text-white w-100" style="z-index: 10;">
-                <h2 class="fw-bold mb-4" style="font-size: 2.5rem;">The Majesty of God</h2>
+                <h2 class="fw-bold mb-4" style="font-size: 2.5rem;">Meet Jeffrey Iyonawan!</h2>
                 <p class="lead ">
-                  God is the creator of all life and the guiding force behind everything.<br>
-                  His wisdom is beyond human comprehension, and His presence is felt in every part of creation,<br>
-                  from the vast cosmos to the smallest living being.<br>
-                  God is love, mercy, and justice. He offers grace to the broken-hearted, strength to the weak,<br>
-                  and hope to the hopeless.
+                  A Visionary Leader,  Best Selling Author, an internationally renowned teacher; His message of principled-centered living has
+                  inspired millions worldwide with the aim of Liberating People for Quality Living.
                 </p>
               </div>
             </div>
