--- a/Digital_shop/templates/sections/footer.html
+++ b/Digital_shop/templates/sections/footer.html
@@ -22,13 +22,12 @@
           </ul>
         </div>
         <div class="col-md-4 mb-2">
-          <h5 class="text-uppercase mb-3">Church Locations</h5>
-          <p class="mb-2">Church 1: 147 Upper Owina Street by Evbuotubu Police Station, Benin City.</p>
-          <p>Church 2: 64 Boundary Road, Off Airport Road, GRA, Benin City.</p>
+          <h5 class="text-uppercase mb-3">Corporate Headquarters</h5>
+          <p>64 Boundary Road, Off Airport Road, GRA, Benin City, Edo State Nigeria</p>
         </div>
         <div id="contact" class="col-md-3 mb-2">
           <h5 class="text-uppercase mb-3">Contact Us</h5>
-          <p>contact@jeffreyiyonawan.com</p>
+          <p>Info@jeffreyiyonawan.com</p>
 
           <p>
             &copy; <span id="year"></span> <a class="text-dark" href="tel:+234802354-1175 ">+234 (802) 354-1175 (9am - 5pm EST, Monday - Friday)</a>
@@ -42,7 +41,7 @@
         <a href="#" class="text-dark me-3"><i class="fab fa-instagram"></i> Instagram</a>
       </div>
       <div class="container mt-2">
-        <img style="height: 100px; width: 200px;" src="{% static 'img/logo-dark.png' %}" alt="Logo" /><p class="text-dark">Home of life changing messages.....</p>
+        <img style="height: 100px; width: 200px;" src="{% static 'img/logo-dark.png' %}" alt="Logo" /><p class="text-dark">Librating People for Quality Living.....</p>
       </div>
     </div>
   </div>
