--- a/Digital_shop/templates/sections/footer.html
+++ b/Digital_shop/templates/sections/footer.html
@@ -14,7 +14,7 @@
               <a href="#" class="text-dark text-decoration-none">All Products</a>
             </li>
             <li>
-              <a href="#" class="text-dark text-decoration-none">My digital library</a>
+              <a href="#" class="text-dark text-decoration-none">My Digital Library</a>
             </li>
             <li>
               <a href="#" class="text-dark text-decoration-none">Contact</a>
