--- a/Digital_shop/templates/index.html
+++ b/Digital_shop/templates/index.html
@@ -226,10 +226,10 @@
                   <!-- Book Info Section -->
                   <div class="col-12 col-sm-6">
                     <!-- Book Title -->
-                    <h4 class="fw-bolder text-center mb-3">{{ book.name }}</h4>
+                    <h4 class="fw-bold text-center mb-3">{{ book.name }}</h4>
         
                     <!-- Book Description -->
-                    <p class="text-muted">{{ book.desc|linebreaks }}</p>
+                    <p class="lead">{{ book.desc|linebreaks }}</p>
         
                     <!-- Book Price -->
                     <h6 class="price fs-5 fw-bolder" data-price="{{ book.price }}" data-currency="ngn">{{ book.price|intcomma }}</h6>
@@ -418,10 +418,10 @@
           <!-- Book Info Section -->
           <div class="col-12 col-sm-6">
             <!-- Book Title -->
-            <h4 class="fw-bolder text-center mb-3">{{ book.name }}</h4>
+            <h4 class="fw-bold text-center mb-3">{{ book.name }}</h4>
 
             <!-- Book Description -->
-            <p class="text-muted">{{ book.desc|linebreaks }}</p>
+            <p class="lead">{{ book.desc|linebreaks }}</p>
 
             <!-- Book Price -->
             <h6 class="price fs-5 fw-bolder" data-price="{{ book.price }}" data-currency="ngn">{{ book.price|intcomma }}</h6>
