--- a/Digital_shop/templates/sections/footer.html
+++ b/Digital_shop/templates/sections/footer.html
@@ -10,12 +10,15 @@
             <li>
               <a href="#" class="text-dark text-decoration-none">Home</a>
             </li>
+            <hr class="my-2">
             <li>
               <a href="#" class="text-dark text-decoration-none">All Products</a>
             </li>
+            <hr class="my-2">
             <li>
               <a href="#" class="text-dark text-decoration-none">My Digital Library</a>
             </li>
+            <hr class="my-2">
             <li>
               <a href="#" class="text-dark text-decoration-none">Contact</a>
             </li>
