--- a/Digital_shop/templates/index.html
+++ b/Digital_shop/templates/index.html
@@ -176,7 +176,7 @@
                    alt="{{ slide.heading }}" />
               <!-- Text Section -->
               <div class="carousel-caption position-absolute mt-5 pt-5  top-50 start-50 translate-middle text-center text-white w-100" style="z-index: 10;">
-                <h2 class="fw-bold mb-4" style="font-size: 2.5rem;">Meet Jeffrey Iyonawan!</h2>
+                <h2 class="fw-bold mb-4" style="font-size: 2.5rem;">Jeffrey Iyonawan!</h2>
                 <p  class="lead">
                   A Visionary Leader,  Best Selling Author, an internationally renowned teacher; His message of principled-centered living has
                   inspired millions worldwide with the aim of Liberating People for Quality Living.
