--- a/Digital_shop/templates/sections/nav.html
+++ b/Digital_shop/templates/sections/nav.html
@@ -279,7 +279,7 @@
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userLinksDropdown">
               <li>
                 <!--{% url 'training' %}-->
-                <a class="text-dark account-dropdown-item" href="#">Training coming..soon</a>
+                <a class="text-dark account-dropdown-item" href="{% url 'training' %}">Masterclass Courses</a>
               </li>
               <li>
                 <a class="text-dark account-dropdown-item" href="{% url 'library' %}">My Digital Library</a>
@@ -346,7 +346,7 @@
         <a href="#" class="nav-link text-white dropdown-toggle" id="accountDropdown" role="button" data-bs-toggle="collapse" data-bs-target="#accountMenu" aria-expanded="false">My Account <i class="bi bi-chevron-down ms-2"></i></a>
         <div id="accountMenu" class="collapse">
           <!--{% url 'training' %}-->
-          <a href="#" class="nav-link text-white ps-3">Training coming..soon</a>
+          <a href="{% url 'training' %}" class="nav-link text-white ps-3">Masterclass Courses</a>
           <a href="{% url 'library' %}" class="nav-link text-white ps-3">My Digital Library</a>
         </div>
       </div>
