--- a/Digital_shop/templates/registeration/send_password_email.html
+++ b/Digital_shop/templates/registeration/send_password_email.html
@@ -73,7 +73,7 @@
       <div class="col-md-4 grid-margin stretch-card mt-5">
         <div class="card border-white bg-transparent">
           <div class="card-body">
-            <h3 class="text-center text-dark fw-bold mt-2 mb-5">Send Password Reset Code</h3>
+            <h3 class="text-center text-dark  mt-2 mb-5">Send Password Reset Code</h3>
 
             <form id="passwordResetForm" class="forms-sample" method="POST" action="{% url 'request_password_reset' %}">
               {% csrf_token %}
@@ -106,54 +106,57 @@
         {% endif %}
       </div>
     </div>
-
-    <footer style="font-size: small;border-top: 1px solid white;" class="text-dark pt-5 mt-5">
-      <div class="container-fluid p-0 bg-light mt-1 pt-1">
+    <footer class="text-dark pt-5 mt-5">
+      <div class="container-fluid shadow p-0 bg-light mt-1 pt-1">
         <div class="container py-5">
           <div class="row">
             <div class="col-md-4 mb-2">
-              <h5 class="text-uppercase mb-1">Main Menu</h5>
-              <ul class="list-unstyled">
+              <h6 class="text-uppercase mb-1">Main Menu</h6>
+              <ul style="font-size: small;" class="list-unstyled ">
                 <li>
                   <a href="#" class="text-dark text-decoration-none">Home</a>
                 </li>
+    
                 <li>
                   <a href="#" class="text-dark text-decoration-none">All Products</a>
                 </li>
+              
                 <li>
-                  <a href="#" class="text-dark text-decoration-none">My digital library</a>
+                  <a href="#" class="text-dark text-decoration-none">My Digital Library</a>
                 </li>
+               
                 <li>
                   <a href="#" class="text-dark text-decoration-none">Contact</a>
                 </li>
               </ul>
             </div>
             <div class="col-md-4 mb-2">
-              <h5 class="text-uppercase mb-3">Church Locations</h5>
-              <p class="mb-2">Church 1: 147 Upper Owina Street by Evbuotubu Police Station, Benin City.</p>
-              <p>Church 2: 64 Boundary Road, Off Airport Road, GRA, Benin City.</p>
+              <h6 class="text-uppercase mb-3">Corporate Headquarters</h6>
+              <p class="">64 Boundary Road, Off Airport Road, GRA, Benin City, Edo State Nigeria</p>
             </div>
             <div id="contact" class="col-md-3 mb-2">
-              <h5 class="text-uppercase mb-3">Contact Us</h5>
-              <p>contact@jeffreyiyonawan.com</p>
-
-              <p>
+              <h6 class="text-uppercase mb-3">Contact Us</h6>
+              <p class="">Info@jeffreyiyonawan.com</p>
+    
+              <p class="">
                 &copy; <span id="year"></span> <a class="text-dark" href="tel:+234802354-1175 ">+234 (802) 354-1175 (9am - 5pm EST, Monday - Friday)</a>
               </p>
             </div>
           </div>
-          <div class="text-center mt-2">
-            <p class="mb-0">Follow us on:</p>
-            <a href="#" class="text-dark me-3"><i class="fab fa-facebook-f"></i> Facebook</a>
-            <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i> Twitter</a>
-            <a href="#" class="text-dark me-3"><i class="fab fa-instagram"></i> Instagram</a>
+          <div style="font-size: small;" class="text-center mt-2">
+            <p class="mb-0 ">Follow us on:</p>
+            <a href="#" class="text-dark me-3 "><i class="fab fa-facebook-f"></i> Facebook</a>
+            <a href="#" class="text-dark me-3 "><i class="fab fa-twitter"></i> Twitter</a>
+            <a href="#" class="text-dark me-3 "><i class="fab fa-instagram"></i> Instagram</a>
           </div>
           <div class="container mt-2">
-            <img style="height: 100px; width: 200px;" src="{% static 'img/logo-dark.png' %}" alt="Logo" /><p class="text-dark">Home of life changing messages.....</p>
+            <img style="height: 100px; width: 200px;" src="{% static 'img/logo-dark.png' %}" alt="Logo" />
+            <p class="text-dark ">Librating People for Quality Living.....</p>
           </div>
         </div>
       </div>
     </footer>
+
 
     <!-- Bootstrap 5 JS -->
     <script>
